//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: December 30th 2024
    Features:
        - Added Ctrl+Shift+F to search all pages.
        - In the Link Summary panel tooltip, add information on where (in the table) each recipe can be found.
        - In the Link Summary panel, allow clicking on a recipe to inspect that recipe's links.
    Fixes:
        - "Map generated" entities that don't generate in any locations could break automation analysis.
        - Recipes that are referenced without being defined do not prevent YAFC from loading.
        - (SA) Tree seeds used by the agricultural tower no longer appear twice in the Dependency Explorer.
        - Milestone analysis got slower in 2.4.0; increase its speed.
        - (SA) Recycling recipes are now considered special, like barrelling/voiding.
        - Fixed recipe parsing for the ResearchProgressProduct output type.
----------------------------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: November 21st 2024
    Features:
        - Add dependency information for tree and resource spawns, fluid pumping, and asteroid mining.
        - (SA) Locations (except nauvis) are now part of the default milestone list.
        - Milestone overlays can be displayed on inaccessible objects.
        - With 22+ milestones, tooltip headers don't draw them unnecessarily overlapped, and can use multiple lines.
    Fixes:
        - Hide blueprint parameters and tiles from the Dependency Explorer and NEIE.
        - Hide blueprint parameters and the synthetic I and O items from more selection windows.
    Internal changes: